--- a/styles/index.css
+++ b/styles/index.css
@@ -1,23 +1,25 @@
 div.header {
     text-align: center;
-    background-image: url("../assets/head.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 10px 10px 10px 10px;
+    vertical-align: middle;
+    background: url(../assets/head.png) no-repeat center fixed;
+    background-size: 100%;
+    height: 70%;
+    overflow: hidden;
+}
+hl.title {
+    font-size: 50px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 5px 5px 5px 5px;
 }
 div.intro {
     text-align: center;
     background-color: #174D1C;
 }
-hl.title {
-    font-size: 20px;
-    background-color: #323234;
-    padding: 5px 5px 5px 5px;
-}
 .title {
     font-weight: bold;
-    margin: 1px 1px 2px 2px;
+    margin: 1px 2px 1px 2px;
 }
 div.social {
     text-align: center;
@@ -28,8 +30,4 @@ a.imagebtn {
 }
 img.imagebtn {
     width: 25px;
-}
-div.projects {
-    text-align: center;
-    background-color: #4D1D17;
 }
