Update to dev-e9cb998 - Add project blocks

--- a/styles/general.css
+++ b/styles/general.css
@@ -21,8 +21,17 @@ p {
     padding: 1px 1px 1px 1px;
     margin: 2px 2px 2px 2px;
 }
+p.scyther {
+    text-decoration:line-through;
+}
 div {
     border: 5px solid white;
     padding: 5px 5px 5px 5px;
     margin: 10px 2px 10px 2px;
+}
+a {
+    color: #ff1493;
+}
+.pink-purple {
+    color: #0DDA0D;
 }
