Update to dev-c9dbc9b - Hotfix TM

--- a/styles/general.css
+++ b/styles/general.css
@@ -32,6 +32,9 @@ div {
 a {
     color: #ff1493;
 }
-.pink-purple {
+a.pink-purple {
     color: #0DDA0D;
+}
+.mediatitle {
+    font-style: italic;
 }
